welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: ')' expected but ';' found.
  if (getY()==0) {diag+=1; setPos(0;diag)}
                                   ^Diagonal:16: error: ';' expected but ')' found.
  if (getY()==0) {diag+=1; setPos(0;diag)}
                                        ^